5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1828_1646.log
== TEST (2019-06-12 14:13:46) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))
o = zeros(size,dtype=int)
j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<50):
		f+=1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:14:27) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))

j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<50):
		f+=1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:14:55) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))

j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]=<50):
		f+=1
print(f)
-- ERROR:
File "XXXX", line 10
    if (x[i]=<50):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:15:04) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))

j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:42) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))
t = zeros(size,dtype=int)
j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(t)):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:07) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))
t = zeros(size,dtype=int)
j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range (len(size(t))):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:21) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))
t = zeros(size,dtype=int)
j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:31) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))

j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:53) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))

j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:52:04) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))

j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
for i in range(size(x))
	h = (vert[i]<= 50)
print(h)
	
-- ERROR:
File "XXXX", line 13
    for i in range(size(x))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:37:03) 
-- CODE:
from numpy import*
x = array(eval(input(": ")))

j = 0 #acumuladora quantidade de saques
f = 0 #contador 
h = 0 #contador

for i in range(size(x)):
	j+=1
	if (x[i]<=50):
		f+=1
print(f)
for i in range(len())
	vert[x]
print(h)
	
-- ERROR:
File "XXXX", line 13
    for i in range(len())
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
